--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script type="text/javascript" src="/jscolor/jscolor.js"></script>
+<script type="text/javascript" src="/js-color-filter/jscolor/jscolor.js"></script>
 <title></title>
 <style>
     #color, #opacity { width : 50px; }
